test/files/neg/virtpatmat_unreach_select.check
virtpatmat_unreach_select.scala:12: warning: unreachable code
    case WARNING.id => // unreachable
                    ^
1 warning
error: No warnings can be incurred under -Werror.
